force-app/main/default/objects/Opportunity/fields/AllowFieldsUpdateBypass__c.field-meta.xml
<CustomField>
    <fullName>AllowFieldsUpdateBypass__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para controlar a permissão de edição dos campos através do flow.</description>
    <label>Allow Fields Update Bypass</label>
    <type>Checkbox</type>
</CustomField>