force-app/main/default/objects/Opportunity/fields/DownPayment__c.field-meta.xml
<CustomField>
    <fullName>DownPayment__c</fullName>
    <description>Valor a ser pago como Entrada.</description>
    <label>Entrada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>