force-app/main/default/objects/Opportunity/fields/FinancingTerm__c.field-meta.xml
<CustomField>
    <fullName>FinancingTerm__c</fullName>
    <description>Campo que armazena o prazo de financimento</description>
    <inlineHelpText>Selecione a quantidade de meses do financiamento.</inlineHelpText>
    <label>Prazo do Financimento (meses)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>24</fullName>
            </value>
            <value>
                <fullName>36</fullName>
            </value>
            <value>
                <fullName>48</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>