force-app/main/default/objects/Opportunity/fields/PaymentType__c.field-meta.xml
<CustomField>
    <fullName>PaymentType__c</fullName>
    <description>Campo que armazena o tipo de pagamento em que será efetuado.</description>
    <label>Tipo de Pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>À Vista</fullName>
            </value>
            <value>
                <fullName>Financiamento</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>