force-app/main/default/objects/Opportunity/recordTypes/CarResale.recordType-meta.xml
<RecordType>
    <fullName>CarResale</fullName>
    <active>true</active>
    <businessProcess>Revendedora de Carros</businessProcess>
    <label>Revenda de Carros</label>
</RecordType>