force-app/main/default/objects/Opportunity/validationRules/PreventManualUpdateRestrictedFields.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventManualUpdateRestrictedFields</fullName>
    <active>true</active>
    <description>Validation rule responsável por impedir o usuário de alterar os campos manualmente.</description>
    <errorConditionFormula>AND(
				AllowFieldsUpdateBypass__c  = false,
				OR(
				ISCHANGED( Amount ),
				ISCHANGED( StageName ),
			 ISCHANGED( PaymentType__c ),
				ISCHANGED( DownPayment__c ),
				ISCHANGED( FinancingTerm__c  )
))</errorConditionFormula>
    <errorMessage>Não é possível modificar esses campos manualmente, utilize o fluxo de venda.</errorMessage>
</ValidationRule>